# coolreader

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FORK_DELTA.md  MASTER_PLAN.md  README.md  SECURITY.md  thirdparty-deploy.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  upstream-sync-dry-run.yml
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/app/: CMakeLists.txt  build.gradle  lint-baseline.xml
android/genrescollection/: build.gradle
android/jni/: cr3engine.cpp  cr3java.h  docview.cpp  org_coolreader_crengine_DocView.h  secure_log.cpp  secure_log.h
android/res/layout/: catalog_edit_dialog.xml
android/res/values/: strings.xml
android/res/values-ja/: strings.xml
android/res/values-ru/: strings.xml
android/res/values-sk/: strings.xml
android/res/values-uk/: strings.xml
cmake/modules/: FindHarfBuzz.cmake
crengine/: CMakeLists.txt
crengine/include/: logredactor.h  lvfileformatparser.h  lvfileparserbase.h  lvstorageobject.h  lvstreamfragment.h  lvstreamutils.h  lvthread.h  lvtinydom.h  lvxmlparsercallback.h  parsebudget.h
crengine/src/: logredactor.cpp  lvmemman.cpp  lvtinydom.cpp  props.cpp
crengine/src/lvimg/: lvimg.cpp
crengine/src/lvstream/: lvarccontainerbase.h  lvcachedstream.h  lvfilemappedstream.cpp  lvfilestream.cpp  lvfilestream.h  lvmemorystream.cpp  lvmemorystream.h  lvstreamutils.cpp  lvtcrstream.h  lvziparc.cpp  lvzipdecodestream.cpp  (+1 more)
crengine/tests/: core_safety_test.cpp  thread_safety_test.cpp
fb2props/: CMakeLists.txt  fb2props.cpp  fb2propstest.cpp
thirdparty_repo/: libjpeg.meta.sh  zlib.meta.sh
tools/: verify_android_http_policy.py  verify_android_log_privacy.py  verify_parse_budget_contract.py
(+101 files in other folders)
